# Nonogram-Solver

./: CMakeLists.txt
src/: Board.cpp  Board.hpp  Solver.hpp  main.cpp
tests/: BoardTests.cpp  CMakeLists.txt  SolverTests.cpp
